native_math/frb_generated.h

// EXTRA BEGIN
typedef struct DartCObject *WireSyncRust2DartDco;
typedef struct wire_cst_list_prim_f_64_strict {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_strict;
typedef struct wire_cst_list_prim_f_64_loose {
  double *ptr;
  int32_t len;
} wire_cst_list_prim_f_64_loose;
typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_record_string_f_64 {
  struct wire_cst_list_prim_u_8_strict *field0;
  double field1;
} wire_cst_record_string_f_64;
typedef struct wire_cst_list_record_string_f_64 {
  struct wire_cst_record_string_f_64 *ptr;
  int32_t len;
} wire_cst_list_record_string_f_64;
void frbgen_kivixa_wire__crate__api__integral_graph(int64_t port_,
                                                    struct wire_cst_list_prim_u_8_strict *expression,
                                                    struct wire_cst_list_prim_u_8_strict *variable,
                                                    struct wire_cst_list_prim_f_64_loose *x_values,
                                                    double initial_value);
void frbgen_kivixa_wire__crate__api__integrate(int64_t port_,
                                               struct wire_cst_list_prim_u_8_strict *expression,
                                               struct wire_cst_list_prim_u_8_strict *variable,
                                               double lower,
                                               double upper,
                                               uint32_t num_intervals);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__is_perfect(uint64_t n);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__is_prime(uint64_t n);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__lcm(uint64_t a, uint64_t b);
void frbgen_kivixa_wire__crate__api__line_integral(int64_t port_,
                                                   struct wire_cst_list_prim_u_8_strict *expression,
                                                   struct wire_cst_list_prim_u_8_strict *x_param,
                                                   struct wire_cst_list_prim_u_8_strict *y_param,
                                                   struct wire_cst_list_prim_u_8_strict *t_var,
                                                   double t_min,
                                                   double t_max,
                                                   uint32_t num_intervals);
void frbgen_kivixa_wire__crate__api__linear_regression(int64_t port_,
                                                       struct wire_cst_list_prim_f_64_loose *x_data,
                                                       struct wire_cst_list_prim_f_64_loose *y_data);
WireSyncRust2DartDco frbgen_kivixa_wire__crate__api__list_divisors(uint64_t n);
void frbgen_kivixa_wire__crate__api__matrix_decomposition(int64_t port_,
                                                          struct wire_cst_list_prim_f_64_loose *data,
                                                          uintptr_t rows,
                                                          uintptr_t cols,
                                                          struct wire_cst_list_prim_u_8_strict *decomposition_type);
void frbgen_kivixa_wire__crate__api__matrix_operation(int64_t port_,
                                                      struct wire_cst_list_prim_f_64_loose *a_data,
                                                      uintptr_t a_rows,
                                                      uintptr_t a_cols,
                                                      struct wire_cst_list_prim_f_64_strict *b_data,
                                                      uintptr_t *b_rows,
                                                      uintptr_t *b_cols,
                                                      struct wire_cst_list_prim_u_8_strict *operation);
void frbgen_kivixa_wire__crate__api__matrix_properties(int64_t port_,
                                                       struct wire_cst_list_prim_f_64_loose *data,
                                                       uintptr_t rows,
                                                       uintptr_t cols);
void frbgen_kivixa_wire__crate__api__matrix_rref(int64_t port_,
                                                 struct wire_cst_list_prim_f_64_loose *data,
                                                 uintptr_t rows,
                                                 uintptr_t cols);
void frbgen_kivixa_wire__crate__api__mixed_partial_derivative(int64_t port_,
                                                              struct wire_cst_list_prim_u_8_strict *expression,
                                                              struct wire_cst_list_prim_u_8_strict *var1,
                                                              struct wire_cst_list_prim_u_8_strict *var2,
                                                              struct wire_cst_list_record_string_f_64 *point);