lib/src/rust_math/frb_generated.io.dart


  late final _wire__crate__api__integral_graphPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Double,
          )
        >
      >('frbgen_kivixa_wire__crate__api__integral_graph');
  late final _wire__crate__api__integral_graph =
      _wire__crate__api__integral_graphPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              double,
            )
          >();

  void wire__crate__api__integrate(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> variable,
    double lower,
    double upper,
    int num_intervals,
  ) {
    return _wire__crate__api__integrate(
      port_,
      expression,
      variable,
      lower,
      upper,
      num_intervals,
    );
  }

  late final _wire__crate__api__integratePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__integrate');
  late final _wire__crate__api__integrate = _wire__crate__api__integratePtr
      .asFunction<
        void Function(
          int,
          ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          double,
          double,
          int,
        )
      >();

  WireSyncRust2DartDco wire__crate__api__is_perfect(int n) {
    return _wire__crate__api__is_perfect(n);
  }

  late final _wire__crate__api__is_perfectPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__is_perfect',
      );
  late final _wire__crate__api__is_perfect = _wire__crate__api__is_perfectPtr
      .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__is_prime(int n) {
    return _wire__crate__api__is_prime(n);
  }

  late final _wire__crate__api__is_primePtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__is_prime',
      );
  late final _wire__crate__api__is_prime = _wire__crate__api__is_primePtr
      .asFunction<WireSyncRust2DartDco Function(int)>();

  WireSyncRust2DartDco wire__crate__api__lcm(int a, int b) {
    return _wire__crate__api__lcm(a, b);
  }

  late final _wire__crate__api__lcmPtr =
      _lookup<
        ffi.NativeFunction<
          WireSyncRust2DartDco Function(ffi.Uint64, ffi.Uint64)
        >
      >('frbgen_kivixa_wire__crate__api__lcm');
  late final _wire__crate__api__lcm = _wire__crate__api__lcmPtr
      .asFunction<WireSyncRust2DartDco Function(int, int)>();

  void wire__crate__api__line_integral(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> x_param,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> y_param,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> t_var,
    double t_min,
    double t_max,
    int num_intervals,
  ) {
    return _wire__crate__api__line_integral(
      port_,
      expression,
      x_param,
      y_param,
      t_var,
      t_min,
      t_max,
      num_intervals,
    );
  }

  late final _wire__crate__api__line_integralPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Double,
            ffi.Double,
            ffi.Uint32,
          )
        >
      >('frbgen_kivixa_wire__crate__api__line_integral');
  late final _wire__crate__api__line_integral =
      _wire__crate__api__line_integralPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              double,
              double,
              int,
            )
          >();

  void wire__crate__api__linear_regression(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> x_data,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> y_data,
  ) {
    return _wire__crate__api__linear_regression(port_, x_data, y_data);
  }

  late final _wire__crate__api__linear_regressionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__linear_regression');
  late final _wire__crate__api__linear_regression =
      _wire__crate__api__linear_regressionPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__list_divisors(int n) {
    return _wire__crate__api__list_divisors(n);
  }

  late final _wire__crate__api__list_divisorsPtr =
      _lookup<ffi.NativeFunction<WireSyncRust2DartDco Function(ffi.Uint64)>>(
        'frbgen_kivixa_wire__crate__api__list_divisors',
      );
  late final _wire__crate__api__list_divisors =
      _wire__crate__api__list_divisorsPtr
          .asFunction<WireSyncRust2DartDco Function(int)>();

  void wire__crate__api__matrix_decomposition(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    int rows,
    int cols,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> decomposition_type,
  ) {
    return _wire__crate__api__matrix_decomposition(
      port_,
      data,
      rows,
      cols,
      decomposition_type,
    );
  }

  late final _wire__crate__api__matrix_decompositionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.UintPtr,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__matrix_decomposition');
  late final _wire__crate__api__matrix_decomposition =
      _wire__crate__api__matrix_decompositionPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              int,
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__matrix_operation(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> a_data,
    int a_rows,
    int a_cols,
    ffi.Pointer<wire_cst_list_prim_f_64_strict> b_data,
    ffi.Pointer<ffi.UintPtr> b_rows,
    ffi.Pointer<ffi.UintPtr> b_cols,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> operation,
  ) {
    return _wire__crate__api__matrix_operation(
      port_,
      a_data,
      a_rows,
      a_cols,
      b_data,
      b_rows,
      b_cols,
      operation,
    );
  }

  late final _wire__crate__api__matrix_operationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.UintPtr,
            ffi.UintPtr,
            ffi.Pointer<wire_cst_list_prim_f_64_strict>,
            ffi.Pointer<ffi.UintPtr>,
            ffi.Pointer<ffi.UintPtr>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__matrix_operation');
  late final _wire__crate__api__matrix_operation =
      _wire__crate__api__matrix_operationPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              int,
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_strict>,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<ffi.UintPtr>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__matrix_properties(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    int rows,
    int cols,
  ) {
    return _wire__crate__api__matrix_properties(port_, data, rows, cols);
  }

  late final _wire__crate__api__matrix_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.UintPtr,
            ffi.UintPtr,
          )
        >
      >('frbgen_kivixa_wire__crate__api__matrix_properties');
  late final _wire__crate__api__matrix_properties =
      _wire__crate__api__matrix_propertiesPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_f_64_loose>,
              int,
              int,
            )
          >();

  void wire__crate__api__matrix_rref(
    int port_,
    ffi.Pointer<wire_cst_list_prim_f_64_loose> data,
    int rows,
    int cols,
  ) {
    return _wire__crate__api__matrix_rref(port_, data, rows, cols);
  }

  late final _wire__crate__api__matrix_rrefPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_f_64_loose>,
            ffi.UintPtr,
            ffi.UintPtr,
          )
        >
      >('frbgen_kivixa_wire__crate__api__matrix_rref');
  late final _wire__crate__api__matrix_rref = _wire__crate__api__matrix_rrefPtr
      .asFunction<
        void Function(int, ffi.Pointer<wire_cst_list_prim_f_64_loose>, int, int)
      >();

  void wire__crate__api__mixed_partial_derivative(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> expression,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> var1,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> var2,
    ffi.Pointer<wire_cst_list_record_string_f_64> point,
  ) {
    return _wire__crate__api__mixed_partial_derivative(
      port_,
      expression,
      var1,
      var2,
      point,
    );
  }

  late final _wire__crate__api__mixed_partial_derivativePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
            ffi.Pointer<wire_cst_list_record_string_f_64>,
          )
        >
      >('frbgen_kivixa_wire__crate__api__mixed_partial_derivative');
  late final _wire__crate__api__mixed_partial_derivative =
      _wire__crate__api__mixed_partial_derivativePtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_record_string_f_64>,
            )
          >();

  WireSyncRust2DartDco wire__crate__api__mod_add(int a, int b, int m) {
    return _wire__crate__api__mod_add(a, b, m);
  }
